Bug 339130 - Impossible to enter duplicate term with different casing to search bar
Summary: Impossible to enter duplicate term with different casing to search bar
Status: RESOLVED FIXED
Alias: None
Product: frameworks-ktexteditor
Classification: Frameworks and Libraries
Component: general (show other bugs)
Version: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-09-16 21:49 UTC by Kevin Funk
Modified: 2014-09-29 17:18 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kevin Funk 2014-09-16 21:49:19 UTC
I've noticed some funky behavior in the combo box of the search bar of ktexteditor. I think it popped up just recently.

Issue:
- Fire up Kate
- Press Ctrl+F
- Enter 'FOO', press enter
- Now enter 'foo', press enter

=> Whoops! 'foo' gets replaced by 'FOO'.
=> Not possible to search for 'foo'

Probably related to 
* 171896c - make shared search & replace history models work again (5 days ago) <Dominik Haumann>?

I didn't bisect, I guess it's faster if you guys have a look at it.

Reproducible: Always
Comment 1 Dominik Haumann 2014-09-16 23:38:30 UTC
It's not related to my commit. I am aware of this and have a fix for katepart. I did not commit this fix, since it looks like KComboBox changed behavior from 4.x to KF5. I discussed that already with dfaure, but we haven't settled on a final solution.
Comment 2 Dominik Haumann 2014-09-29 17:18:36 UTC
Git commit 5ad753a7cc765794fb63163485e777ec2129d0d4 by Dominik Haumann.
Committed on 29/09/2014 at 17:17.
Pushed by dhaumann into branch 'master'.

fix: avoid auto-completion to interfere with search/replace text

M  +3    -5    src/search/katesearchbar.cpp
M  +1    -6    src/search/searchbarincremental.ui
M  +2    -9    src/search/searchbarpower.ui

http://commits.kde.org/ktexteditor/5ad753a7cc765794fb63163485e777ec2129d0d4