fix: avoid auto-completion to interfere with search/replace text

BUG: 339130